Bug 1848526 - Clear descendant intrinsics too when opening a popup. r=tnikkel,layout-reviewers

This is probably testable, but I don't know how we'd make the test
reliable (we haven't found particularly reliable STR yet, see comments).

Differential Revision: https://phabricator.services.mozilla.com/D193827